UMC/UMC/Generated/EquationsParser.cpp

// Generated from /home/bug/projects/DFW2/DFW2/UMC/UMC/Equations.g4 by ANTLR 4.9.2


#include "EquationsVisitor.h"

#include "EquationsParser.h"


using namespace antlrcpp;
using namespace antlr4;

EquationsParser::EquationsParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

EquationsParser::~EquationsParser() {
  delete _interpreter;
}

std::string EquationsParser::getGrammarFileName() const {
  return "Equations.g4";
}

const std::vector<std::string>& EquationsParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& EquationsParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- InputContext ------------------------------------------------------------------

EquationsParser::InputContext::InputContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

EquationsParser::MainContext* EquationsParser::InputContext::main() {
  return getRuleContext<EquationsParser::MainContext>(0);
}

tree::TerminalNode* EquationsParser::InputContext::EOF() {
  return getToken(EquationsParser::EOF, 0);
}

EquationsParser::VariablesContext* EquationsParser::InputContext::variables() {
  return getRuleContext<EquationsParser::VariablesContext>(0);
}

EquationsParser::InitContext* EquationsParser::InputContext::init() {
  return getRuleContext<EquationsParser::InitContext>(0);
}

std::vector<tree::TerminalNode *> EquationsParser::InputContext::NEWLINE() {
  return getTokens(EquationsParser::NEWLINE);
}

tree::TerminalNode* EquationsParser::InputContext::NEWLINE(size_t i) {
  return getToken(EquationsParser::NEWLINE, i);
}


size_t EquationsParser::InputContext::getRuleIndex() const {
  return EquationsParser::RuleInput;
}


antlrcpp::Any EquationsParser::InputContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EquationsVisitor*>(visitor))
    return parserVisitor->visitInput(this);
  else
    return visitor->visitChildren(this);
}

EquationsParser::InputContext* EquationsParser::input() {
  InputContext *_localctx = _tracker.createInstance<InputContext>(_ctx, getState());
  enterRule(_localctx, 0, EquationsParser::RuleInput);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(39);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == EquationsParser::VARS) {
      setState(38);
      variables();
    }
    setState(41);
    main();
    setState(43);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == EquationsParser::INIT) {
      setState(42);
      init();
    }
    setState(48);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == EquationsParser::NEWLINE) {
      setState(45);
      match(EquationsParser::NEWLINE);
      setState(50);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(51);
    match(EquationsParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MainContext ------------------------------------------------------------------

EquationsParser::MainContext::MainContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EquationsParser::MainContext::MAIN() {
  return getToken(EquationsParser::MAIN, 0);
}

EquationsParser::EquationsysContext* EquationsParser::MainContext::equationsys() {
  return getRuleContext<EquationsParser::EquationsysContext>(0);
}


size_t EquationsParser::MainContext::getRuleIndex() const {
  return EquationsParser::RuleMain;
}


antlrcpp::Any EquationsParser::MainContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EquationsVisitor*>(visitor))
    return parserVisitor->visitMain(this);
  else
    return visitor->visitChildren(this);
}

EquationsParser::MainContext* EquationsParser::main() {
  MainContext *_localctx = _tracker.createInstance<MainContext>(_ctx, getState());
  enterRule(_localctx, 2, EquationsParser::RuleMain);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(53);
    match(EquationsParser::MAIN);
    setState(54);
    equationsys();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InitContext ------------------------------------------------------------------

EquationsParser::InitContext::InitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EquationsParser::InitContext::INIT() {
  return getToken(EquationsParser::INIT, 0);
}

EquationsParser::EquationsysContext* EquationsParser::InitContext::equationsys() {
  return getRuleContext<EquationsParser::EquationsysContext>(0);
}


size_t EquationsParser::InitContext::getRuleIndex() const {
  return EquationsParser::RuleInit;
}


antlrcpp::Any EquationsParser::InitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EquationsVisitor*>(visitor))
    return parserVisitor->visitInit(this);
  else
    return visitor->visitChildren(this);
}

EquationsParser::InitContext* EquationsParser::init() {
  InitContext *_localctx = _tracker.createInstance<InitContext>(_ctx, getState());
  enterRule(_localctx, 4, EquationsParser::RuleInit);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(56);
    match(EquationsParser::INIT);
    setState(57);
    equationsys();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariablesContext ------------------------------------------------------------------

EquationsParser::VariablesContext::VariablesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EquationsParser::VariablesContext::VARS() {
  return getToken(EquationsParser::VARS, 0);
}

EquationsParser::VardefinesContext* EquationsParser::VariablesContext::vardefines() {
  return getRuleContext<EquationsParser::VardefinesContext>(0);
}


size_t EquationsParser::VariablesContext::getRuleIndex() const {
  return EquationsParser::RuleVariables;
}


antlrcpp::Any EquationsParser::VariablesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EquationsVisitor*>(visitor))
    return parserVisitor->visitVariables(this);
  else
    return visitor->visitChildren(this);
}

EquationsParser::VariablesContext* EquationsParser::variables() {
  VariablesContext *_localctx = _tracker.createInstance<VariablesContext>(_ctx, getState());
  enterRule(_localctx, 6, EquationsParser::RuleVariables);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(59);
    match(EquationsParser::VARS);
    setState(60);
    vardefines();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VardefinesContext ------------------------------------------------------------------

EquationsParser::VardefinesContext::VardefinesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EquationsParser::VardefinesContext::LCB() {
  return getToken(EquationsParser::LCB, 0);
}

tree::TerminalNode* EquationsParser::VardefinesContext::RCB() {
  return getToken(EquationsParser::RCB, 0);
}

std::vector<EquationsParser::VardefinelineContext *> EquationsParser::VardefinesContext::vardefineline() {
  return getRuleContexts<EquationsParser::VardefinelineContext>();
}

EquationsParser::VardefinelineContext* EquationsParser::VardefinesContext::vardefineline(size_t i) {
  return getRuleContext<EquationsParser::VardefinelineContext>(i);
}

std::vector<tree::TerminalNode *> EquationsParser::VardefinesContext::NEWLINE() {
  return getTokens(EquationsParser::NEWLINE);
}

tree::TerminalNode* EquationsParser::VardefinesContext::NEWLINE(size_t i) {
  return getToken(EquationsParser::NEWLINE, i);
}


size_t EquationsParser::VardefinesContext::getRuleIndex() const {
  return EquationsParser::RuleVardefines;
}


antlrcpp::Any EquationsParser::VardefinesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EquationsVisitor*>(visitor))
    return parserVisitor->visitVardefines(this);
  else
    return visitor->visitChildren(this);
}

EquationsParser::VardefinesContext* EquationsParser::vardefines() {
  VardefinesContext *_localctx = _tracker.createInstance<VardefinesContext>(_ctx, getState());
  enterRule(_localctx, 8, EquationsParser::RuleVardefines);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(62);
    match(EquationsParser::LCB);
    setState(66);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(63);
        vardefineline(); 
      }
      setState(68);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    }
    setState(72);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == EquationsParser::NEWLINE) {
      setState(69);
      match(EquationsParser::NEWLINE);
      setState(74);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(75);
    match(EquationsParser::RCB);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EquationsysContext ------------------------------------------------------------------

EquationsParser::EquationsysContext::EquationsysContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EquationsParser::EquationsysContext::LCB() {
  return getToken(EquationsParser::LCB, 0);
}

tree::TerminalNode* EquationsParser::EquationsysContext::RCB() {
  return getToken(EquationsParser::RCB, 0);
}

std::vector<EquationsParser::EquationlineContext *> EquationsParser::EquationsysContext::equationline() {
  return getRuleContexts<EquationsParser::EquationlineContext>();
}

EquationsParser::EquationlineContext* EquationsParser::EquationsysContext::equationline(size_t i) {
  return getRuleContext<EquationsParser::EquationlineContext>(i);
}

std::vector<tree::TerminalNode *> EquationsParser::EquationsysContext::NEWLINE() {
  return getTokens(EquationsParser::NEWLINE);
}

tree::TerminalNode* EquationsParser::EquationsysContext::NEWLINE(size_t i) {
  return getToken(EquationsParser::NEWLINE, i);
}


size_t EquationsParser::EquationsysContext::getRuleIndex() const {
  return EquationsParser::RuleEquationsys;
}


antlrcpp::Any EquationsParser::EquationsysContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EquationsVisitor*>(visitor))
    return parserVisitor->visitEquationsys(this);
  else
    return visitor->visitChildren(this);
}

EquationsParser::EquationsysContext* EquationsParser::equationsys() {
  EquationsysContext *_localctx = _tracker.createInstance<EquationsysContext>(_ctx, getState());
  enterRule(_localctx, 10, EquationsParser::RuleEquationsys);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(77);
    match(EquationsParser::LCB);
    setState(81);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(78);
        equationline(); 
      }
      setState(83);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
    setState(87);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == EquationsParser::NEWLINE) {
      setState(84);
      match(EquationsParser::NEWLINE);
      setState(89);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(90);
    match(EquationsParser::RCB);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarlistContext ------------------------------------------------------------------

EquationsParser::VarlistContext::VarlistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> EquationsParser::VarlistContext::VARIABLE() {
  return getTokens(EquationsParser::VARIABLE);
}

tree::TerminalNode* EquationsParser::VarlistContext::VARIABLE(size_t i) {
  return getToken(EquationsParser::VARIABLE, i);
}

std::vector<tree::TerminalNode *> EquationsParser::VarlistContext::COMMA() {
  return getTokens(EquationsParser::COMMA);
}

tree::TerminalNode* EquationsParser::VarlistContext::COMMA(size_t i) {
  return getToken(EquationsParser::COMMA, i);
}


size_t EquationsParser::VarlistContext::getRuleIndex() const {
  return EquationsParser::RuleVarlist;
}


antlrcpp::Any EquationsParser::VarlistContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EquationsVisitor*>(visitor))
    return parserVisitor->visitVarlist(this);
  else
    return visitor->visitChildren(this);
}

EquationsParser::VarlistContext* EquationsParser::varlist() {
  VarlistContext *_localctx = _tracker.createInstance<VarlistContext>(_ctx, getState());
  enterRule(_localctx, 12, EquationsParser::RuleVarlist);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    match(EquationsParser::VARIABLE);
    setState(97);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == EquationsParser::COMMA) {
      setState(93);
      match(EquationsParser::COMMA);
      setState(94);
      match(EquationsParser::VARIABLE);
      setState(99);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VardefinelineContext ------------------------------------------------------------------

EquationsParser::VardefinelineContext::VardefinelineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

EquationsParser::VardefineContext* EquationsParser::VardefinelineContext::vardefine() {
  return getRuleContext<EquationsParser::VardefineContext>(0);
}

std::vector<tree::TerminalNode *> EquationsParser::VardefinelineContext::NEWLINE() {
  return getTokens(EquationsParser::NEWLINE);
}

tree::TerminalNode* EquationsParser::VardefinelineContext::NEWLINE(size_t i) {
  return getToken(EquationsParser::NEWLINE, i);
}


size_t EquationsParser::VardefinelineContext::getRuleIndex() const {
  return EquationsParser::RuleVardefineline;
}


antlrcpp::Any EquationsParser::VardefinelineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EquationsVisitor*>(visitor))
    return parserVisitor->visitVardefineline(this);
  else
    return visitor->visitChildren(this);
}

EquationsParser::VardefinelineContext* EquationsParser::vardefineline() {
  VardefinelineContext *_localctx = _tracker.createInstance<VardefinelineContext>(_ctx, getState());
  enterRule(_localctx, 14, EquationsParser::RuleVardefineline);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(100);
      match(EquationsParser::NEWLINE);
      setState(103); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == EquationsParser::NEWLINE);
    setState(105);
    vardefine();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VardefineContext ------------------------------------------------------------------

EquationsParser::VardefineContext::VardefineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

EquationsParser::ConstvardefineContext* EquationsParser::VardefineContext::constvardefine() {
  return getRuleContext<EquationsParser::ConstvardefineContext>(0);
}

EquationsParser::ExtvardefineContext* EquationsParser::VardefineContext::extvardefine() {
  return getRuleContext<EquationsParser::ExtvardefineContext>(0);
}


size_t EquationsParser::VardefineContext::getRuleIndex() const {
  return EquationsParser::RuleVardefine;
}


antlrcpp::Any EquationsParser::VardefineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EquationsVisitor*>(visitor))
    return parserVisitor->visitVardefine(this);
  else
    return visitor->visitChildren(this);
}

EquationsParser::VardefineContext* EquationsParser::vardefine() {
  VardefineContext *_localctx = _tracker.createInstance<VardefineContext>(_ctx, getState());
  enterRule(_localctx, 16, EquationsParser::RuleVardefine);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(109);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case EquationsParser::CONST: {
        enterOuterAlt(_localctx, 1);
        setState(107);
        constvardefine();
        break;
      }

      case EquationsParser::EXTERNAL: {
        enterOuterAlt(_localctx, 2);
        setState(108);
        extvardefine();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstvardefineContext ------------------------------------------------------------------

EquationsParser::ConstvardefineContext::ConstvardefineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EquationsParser::ConstvardefineContext::CONST() {
  return getToken(EquationsParser::CONST, 0);
}

EquationsParser::VarlistContext* EquationsParser::ConstvardefineContext::varlist() {
  return getRuleContext<EquationsParser::VarlistContext>(0);
}


size_t EquationsParser::ConstvardefineContext::getRuleIndex() const {
  return EquationsParser::RuleConstvardefine;
}


antlrcpp::Any EquationsParser::ConstvardefineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EquationsVisitor*>(visitor))
    return parserVisitor->visitConstvardefine(this);
  else
    return visitor->visitChildren(this);
}

EquationsParser::ConstvardefineContext* EquationsParser::constvardefine() {
  ConstvardefineContext *_localctx = _tracker.createInstance<ConstvardefineContext>(_ctx, getState());
  enterRule(_localctx, 18, EquationsParser::RuleConstvardefine);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    match(EquationsParser::CONST);
    setState(112);
    varlist();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExtvardefineContext ------------------------------------------------------------------

EquationsParser::ExtvardefineContext::ExtvardefineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EquationsParser::ExtvardefineContext::EXTERNAL() {
  return getToken(EquationsParser::EXTERNAL, 0);
}

EquationsParser::VarlistContext* EquationsParser::ExtvardefineContext::varlist() {
  return getRuleContext<EquationsParser::VarlistContext>(0);
}


size_t EquationsParser::ExtvardefineContext::getRuleIndex() const {
  return EquationsParser::RuleExtvardefine;
}


antlrcpp::Any EquationsParser::ExtvardefineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EquationsVisitor*>(visitor))
    return parserVisitor->visitExtvardefine(this);
  else
    return visitor->visitChildren(this);
}

EquationsParser::ExtvardefineContext* EquationsParser::extvardefine() {
  ExtvardefineContext *_localctx = _tracker.createInstance<ExtvardefineContext>(_ctx, getState());
  enterRule(_localctx, 20, EquationsParser::RuleExtvardefine);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(114);
    match(EquationsParser::EXTERNAL);
    setState(115);
    varlist();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EquationContext ------------------------------------------------------------------

EquationsParser::EquationContext::EquationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EquationsParser::EquationContext::EQUAL() {
  return getToken(EquationsParser::EQUAL, 0);
}

std::vector<EquationsParser::ExpressionContext *> EquationsParser::EquationContext::expression() {
  return getRuleContexts<EquationsParser::ExpressionContext>();
}

EquationsParser::ExpressionContext* EquationsParser::EquationContext::expression(size_t i) {
  return getRuleContext<EquationsParser::ExpressionContext>(i);
}


size_t EquationsParser::EquationContext::getRuleIndex() const {
  return EquationsParser::RuleEquation;
}


antlrcpp::Any EquationsParser::EquationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EquationsVisitor*>(visitor))
    return parserVisitor->visitEquation(this);
  else
    return visitor->visitChildren(this);
}

EquationsParser::EquationContext* EquationsParser::equation() {
  EquationContext *_localctx = _tracker.createInstance<EquationContext>(_ctx, getState());
  enterRule(_localctx, 22, EquationsParser::RuleEquation);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    dynamic_cast<EquationContext *>(_localctx)->left = expression(0);
    setState(118);
    match(EquationsParser::EQUAL);
    setState(119);
    dynamic_cast<EquationContext *>(_localctx)->right = expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EquationlineContext ------------------------------------------------------------------

EquationsParser::EquationlineContext::EquationlineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

EquationsParser::EquationContext* EquationsParser::EquationlineContext::equation() {
  return getRuleContext<EquationsParser::EquationContext>(0);
}

std::vector<tree::TerminalNode *> EquationsParser::EquationlineContext::NEWLINE() {
  return getTokens(EquationsParser::NEWLINE);
}

tree::TerminalNode* EquationsParser::EquationlineContext::NEWLINE(size_t i) {
  return getToken(EquationsParser::NEWLINE, i);
}


size_t EquationsParser::EquationlineContext::getRuleIndex() const {
  return EquationsParser::RuleEquationline;
}


antlrcpp::Any EquationsParser::EquationlineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EquationsVisitor*>(visitor))
    return parserVisitor->visitEquationline(this);
  else
    return visitor->visitChildren(this);
}

EquationsParser::EquationlineContext* EquationsParser::equationline() {
  EquationlineContext *_localctx = _tracker.createInstance<EquationlineContext>(_ctx, getState());
  enterRule(_localctx, 24, EquationsParser::RuleEquationline);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(122); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(121);
      match(EquationsParser::NEWLINE);
      setState(124); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == EquationsParser::NEWLINE);
    setState(126);
    equation();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionlistContext ------------------------------------------------------------------

EquationsParser::ExpressionlistContext::ExpressionlistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<EquationsParser::ExpressionContext *> EquationsParser::ExpressionlistContext::expression() {
  return getRuleContexts<EquationsParser::ExpressionContext>();
}

EquationsParser::ExpressionContext* EquationsParser::ExpressionlistContext::expression(size_t i) {
  return getRuleContext<EquationsParser::ExpressionContext>(i);
}

std::vector<tree::TerminalNode *> EquationsParser::ExpressionlistContext::COMMA() {
  return getTokens(EquationsParser::COMMA);
}

tree::TerminalNode* EquationsParser::ExpressionlistContext::COMMA(size_t i) {
  return getToken(EquationsParser::COMMA, i);
}


size_t EquationsParser::ExpressionlistContext::getRuleIndex() const {
  return EquationsParser::RuleExpressionlist;
}


antlrcpp::Any EquationsParser::ExpressionlistContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EquationsVisitor*>(visitor))
    return parserVisitor->visitExpressionlist(this);
  else
    return visitor->visitChildren(this);
}

EquationsParser::ExpressionlistContext* EquationsParser::expressionlist() {
  ExpressionlistContext *_localctx = _tracker.createInstance<ExpressionlistContext>(_ctx, getState());
  enterRule(_localctx, 26, EquationsParser::RuleExpressionlist);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(128);
    expression(0);
    setState(133);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == EquationsParser::COMMA) {
      setState(129);
      match(EquationsParser::COMMA);
      setState(130);
      expression(0);
      setState(135);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IntlistContext ------------------------------------------------------------------

EquationsParser::IntlistContext::IntlistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> EquationsParser::IntlistContext::INTEGER() {
  return getTokens(EquationsParser::INTEGER);
}

tree::TerminalNode* EquationsParser::IntlistContext::INTEGER(size_t i) {
  return getToken(EquationsParser::INTEGER, i);
}

std::vector<tree::TerminalNode *> EquationsParser::IntlistContext::COMMA() {
  return getTokens(EquationsParser::COMMA);
}

tree::TerminalNode* EquationsParser::IntlistContext::COMMA(size_t i) {
  return getToken(EquationsParser::COMMA, i);
}


size_t EquationsParser::IntlistContext::getRuleIndex() const {
  return EquationsParser::RuleIntlist;
}


antlrcpp::Any EquationsParser::IntlistContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EquationsVisitor*>(visitor))
    return parserVisitor->visitIntlist(this);
  else
    return visitor->visitChildren(this);
}

EquationsParser::IntlistContext* EquationsParser::intlist() {
  IntlistContext *_localctx = _tracker.createInstance<IntlistContext>(_ctx, getState());
  enterRule(_localctx, 28, EquationsParser::RuleIntlist);
  size_t _la = 0;
